--- a/web/src/style/main.css
+++ b/web/src/style/main.css
@@ -16,6 +16,8 @@ h1 {
   padding-bottom: 1%;
   padding-left: 1%;
   font-family: sans-serif;
+  position: fixed;
+  width: 100%;
 }
 .user {
   float: right;
@@ -51,12 +53,16 @@ h1 {
 }
 footer {
   background-color: rgb(184, 184, 184);
-  position: absolute;
+  position: fixed;
   bottom: 0;
   width: 100%;
 }
 .image {
   text-align: center;
+  width: 100%;
+  margin: auto;
+  max-width: 100%;
+  max-height: 100%;
 }
 .image img {
   text-align: center;
@@ -77,13 +83,21 @@ footer {
 .answers {
   text-align: left;
   margin: 0 auto;
-  width: 100%;
 }
 .answers-container {
   text-align: center;
   width: 100%;
+  display: flex;
+  justify-content: center;
 }
 .selec-container {
-  background-color: red;
-  margin-bottom: 0;
+  height: 44px;
+  line-height: 45px;
+  border-top: 1px #de7908 solid;
+  background-color: #eb8037;
+  text-align: center;
+  bottom: 20px;
+  z-index: 5001250;
+  position: fixed;
+  width: 100%;
 }
