--- a/web/src/style/main.css
+++ b/web/src/style/main.css
@@ -61,6 +61,7 @@ footer {
   text-align: center;
   width: 100%;
   margin: auto;
+  margin-top: 50px;
   max-width: 100%;
   max-height: 100%;
 }
@@ -100,4 +101,10 @@ footer {
   z-index: 5001250;
   position: fixed;
   width: 100%;
+}
+.selec-container .previous {
+  float: left;
+}
+.selec-container .next {
+  float: right;
 }
