--- a/web/src/style/main.css
+++ b/web/src/style/main.css
@@ -7,24 +7,7 @@ body {
   margin: 0;
   overflow-x: hidden;
 }
-h1 {
-  background-color: rgb(245, 245, 245);
-  /* border-bottom: 1px solid black; */
-  box-shadow: 0 4px 2px -2px rgb(197, 197, 197);
-  margin: 0;
-  padding-top: 1%;
-  padding-bottom: 1%;
-  padding-left: 1%;
-  font-family: sans-serif;
-  position: fixed;
-  width: 100%;
-}
-.user {
-  float: right;
-  margin-right: 3%;
-  margin-top: 5px;
-  font-size: 0.6em;
-}
+
 .main-menu ul {
   padding: 0;
 }
@@ -52,7 +35,7 @@ h1 {
   text-decoration: none;
 }
 footer {
-  background-color: rgb(184, 184, 184);
+  background-color: rgb(245, 245, 245);
   position: fixed;
   bottom: 0;
   width: 100%;
@@ -61,15 +44,25 @@ footer {
   text-align: center;
   width: 100%;
   margin: auto;
-  margin-top: 50px;
   max-width: 100%;
   max-height: 100%;
 }
 .image img {
   text-align: center;
-  border: 1px solid black;
-  border-radius: 30px;
+  border-radius: 20px;
   padding: 0px;
+  width: 100%;
+  box-shadow: 2px 2px 2px 0px rgb(197, 197, 197);
+}
+@media only screen and (min-width: 300px) {
+  .image img {
+    width: 70%;
+  }
+}
+@media only screen and (min-width: 500px) {
+  .image img {
+    width: 35%;
+  }
 }
 .question-container {
   margin: 2%;
@@ -90,21 +83,4 @@ footer {
   width: 100%;
   display: flex;
   justify-content: center;
-}
-.selec-container {
-  height: 44px;
-  line-height: 45px;
-  border-top: 1px #de7908 solid;
-  background-color: #eb8037;
-  text-align: center;
-  bottom: 20px;
-  z-index: 5001250;
-  position: fixed;
-  width: 100%;
-}
-.selec-container .previous {
-  float: left;
-}
-.selec-container .next {
-  float: right;
 }
