--- a/web/src/style/main.css
+++ b/web/src/style/main.css
@@ -84,3 +84,8 @@ footer {
   display: flex;
   justify-content: center;
 }
+.row {
+  padding-top: 1%;
+  margin-left: 0px;
+  margin-right: 0px;
+}
