--- a/web/src/style/footer.css
+++ b/web/src/style/footer.css
@@ -1,15 +1,19 @@
 .selec-container {
-  height: 44px;
   line-height: 45px;
   box-shadow: 0px -1px 0px 1px rgb(197, 197, 197);
-  background-color: rgb(245, 245, 245);
+  background-color: rgb(197, 255, 191);
   text-align: center;
-  bottom: 50px;
+  bottom: 40px;
   z-index: 5001250;
   position: fixed;
   width: 100%;
 }
 .selec-container .previous {
+  background-color: rgba(255, 0, 0, 0);
 }
 .selec-container .next {
+  background-color: rgba(255, 0, 0, 0);
+}
+.owl-nav {
+  display: none;
 }
