--- a/web/src/style/footer.css
+++ b/web/src/style/footer.css
@@ -3,17 +3,14 @@
   box-shadow: 0px -1px 0px 1px rgb(197, 197, 197);
   background-color: rgb(197, 255, 191);
   text-align: center;
-  bottom: 40px;
   z-index: 5001250;
-  position: fixed;
   width: 100%;
+  position: absolute;
+  bottom: 0px;
 }
 .selec-container .previous {
   background-color: rgba(255, 0, 0, 0);
 }
 .selec-container .next {
   background-color: rgba(255, 0, 0, 0);
-}
-.owl-nav {
-  display: none;
 }
