--- a/web/src/style/main.css
+++ b/web/src/style/main.css
@@ -6,6 +6,8 @@ body {
   background-color: white;
   margin: 0;
   overflow-x: hidden;
+  height: 100vh;
+  position: relative;
 }
 
 .main-menu ul {
