--- a/web/src/style/footer.css
+++ b/web/src/style/footer.css
@@ -6,11 +6,57 @@
   z-index: 5001250;
   width: 100%;
   position: absolute;
+  margin-top: 0px;
   bottom: 0px;
+  padding-bottom: 1%;
 }
 .selec-container .previous {
   background-color: rgba(255, 0, 0, 0);
+  -webkit-border-radius: 4;
+  -moz-border-radius: 4;
+  border-radius: 4px;
+  color: #ffffff;
+  background: #18ff71;
+  border: solid #636363 1px;
+  text-shadow: -1px 0 black, 0 0.3px black, 0.3px 0 black, 0 -1px black;
+  text-decoration: none;
+  height: 100%;
+}
+.selec-container .previous:hover {
+  background: #12ff36;
+  text-decoration: none;
 }
 .selec-container .next {
   background-color: rgba(255, 0, 0, 0);
+  -webkit-border-radius: 4;
+  -moz-border-radius: 4;
+  border-radius: 4px;
+  color: #ffffff;
+  background: #18ff71;
+  border: solid #636363 1px;
+  text-shadow: -1px 0 black, 0 0.3px black, 0.3px 0 black, 0 -1px black;
+  text-decoration: none;
+  height: 100%;
+}
+.owl-item {
+  width: 60px !important;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.btn-selq {
+  -webkit-border-radius: 4;
+  -moz-border-radius: 4;
+  border-radius: 4px;
+  color: #ffffff;
+  background: #59ff93;
+  padding: 0px 20px 0px 20px;
+  border: solid #30ff78 1px;
+  text-decoration: none;
+  text-align: center;
+}
+.btn-selq:hover {
+  background: #12ff36;
+  text-decoration: none;
 }
