--- a/web/src/style/main.css
+++ b/web/src/style/main.css
@@ -48,7 +48,7 @@ footer {
   margin: auto;
   max-width: 100%;
   max-height: 100%;
-  margin-top: 15px;
+  margin-top: 3%;
 }
 .image img {
   text-align: center;
