--- a/web/src/style/main.css
+++ b/web/src/style/main.css
@@ -6,18 +6,24 @@ body {
   background-color: white;
   margin: 0;
   overflow-x: hidden;
-  height: 100vh;
-  position: relative;
 }
 
 .main-menu ul {
   padding: 0;
+  list-style: none !important;
 }
 .main-menu li {
-  list-style: none;
+  list-style: none !important;
   text-align: center;
   margin: 1% 20% 1% 20%;
   padding: 1%;
+}
+.answers ul {
+  list-style: none;
+}
+.answers li {
+  width: 100%;
+  margin-bottom: 2%;
 }
 .main-menu .btn {
   width: 100%;
@@ -38,8 +44,6 @@ body {
 }
 footer {
   background-color: rgb(245, 245, 245);
-  position: fixed;
-  bottom: 0;
   width: 100%;
 }
 .image {
@@ -66,6 +70,10 @@ footer {
   .image img {
     width: 35%;
   }
+  .answers-container {
+    display: flex;
+    justify-content: center;
+  }
 }
 .question-container {
   margin: 2%;
@@ -84,11 +92,74 @@ footer {
 .answers-container {
   text-align: center;
   width: 100%;
-  display: flex;
-  justify-content: center;
 }
 .row {
   padding-top: 1%;
   margin-left: 0px;
   margin-right: 0px;
 }
+/*STYLE FOR RADIOBUTTONS*/
+/* The container */
+.containerrb {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 22px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Hide the browser's default radio button */
+.containerrb input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+
+/* Create a custom radio button */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: #eee;
+  border-radius: 50%;
+}
+
+/* On mouse-over, add a grey background color */
+.containerrb:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+/* When the radio button is checked, add a blue background */
+.containerrb input:checked ~ .checkmark {
+  background-color: #30ff78;
+}
+
+/* Create the indicator (the dot/circle - hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the indicator (dot/circle) when checked */
+.containerrb input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the indicator (dot/circle) */
+.containerrb .checkmark:after {
+  top: 9px;
+  left: 9px;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background: white;
+}
+/*END RADIO*/
