--- a/web/src/style/footer.css
+++ b/web/src/style/footer.css
@@ -10,34 +10,6 @@
   bottom: 0px;
   padding-bottom: 1%;
 }
-.selec-container .previous {
-  background-color: rgba(255, 0, 0, 0);
-  -webkit-border-radius: 4;
-  -moz-border-radius: 4;
-  border-radius: 4px;
-  color: #ffffff;
-  background: #18ff71;
-  border: solid #636363 1px;
-  text-shadow: -1px 0 black, 0 0.3px black, 0.3px 0 black, 0 -1px black;
-  text-decoration: none;
-  height: 100%;
-}
-.selec-container .previous:hover {
-  background: #12ff36;
-  text-decoration: none;
-}
-.selec-container .next {
-  background-color: rgba(255, 0, 0, 0);
-  -webkit-border-radius: 4;
-  -moz-border-radius: 4;
-  border-radius: 4px;
-  color: #ffffff;
-  background: #18ff71;
-  border: solid #636363 1px;
-  text-shadow: -1px 0 black, 0 0.3px black, 0.3px 0 black, 0 -1px black;
-  text-decoration: none;
-  height: 100%;
-}
 .owl-item {
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -63,4 +35,16 @@
   .selec-container {
     padding: 5%;
   }
+}
+footer {
+  line-height: 45px;
+  box-shadow: 0px -1px 0px 1px rgb(197, 197, 197);
+  background-color: rgb(197, 255, 191);
+  text-align: center;
+  z-index: 5001250;
+  width: 100%;
+  position: fixed;
+  margin-top: 0px;
+  bottom: 0px;
+  padding-bottom: 1%;
 }
