--- a/web/src/style/main.css
+++ b/web/src/style/main.css
@@ -42,17 +42,13 @@ body {
   background: rgb(230, 230, 230);
   text-decoration: none;
 }
-footer {
-  background-color: rgb(245, 245, 245);
-  width: 100%;
-}
-.image {
+
+.maincontent .image {
   text-align: center;
   width: 100%;
   margin: auto;
   max-width: 100%;
   max-height: 100%;
-  margin-top: 3%;
 }
 .image img {
   text-align: center;
@@ -60,15 +56,16 @@ footer {
   padding: 0px;
   width: 100%;
   box-shadow: 2px 2px 2px 0px rgb(197, 197, 197);
+  margin-top: 2%;
 }
 @media only screen and (min-width: 300px) {
   .image img {
     width: 70%;
   }
 }
-@media only screen and (min-width: 500px) {
+@media only screen and (min-width: 540px) {
   .image img {
-    width: 35%;
+    width: 30%;
   }
   .answers-container {
     display: flex;
@@ -106,7 +103,7 @@ footer {
   padding-left: 35px;
   margin-bottom: 12px;
   cursor: pointer;
-  font-size: 22px;
+  line-height: 30px;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
@@ -129,6 +126,7 @@ footer {
   width: 25px;
   background-color: #eee;
   border-radius: 50%;
+  border: 1px solid black;
 }
 
 /* On mouse-over, add a grey background color */
@@ -155,11 +153,35 @@ footer {
 
 /* Style the indicator (dot/circle) */
 .containerrb .checkmark:after {
-  top: 9px;
-  left: 9px;
+  top: 8px;
+  left: 8px;
   width: 8px;
   height: 8px;
   border-radius: 50%;
   background: white;
 }
 /*END RADIO*/
+.leftarrow {
+  display: inline-block;
+}
+.rightarrow {
+  display: inline-block;
+}
+.arrowbtn:hover {
+}
+.arrowbtn img {
+  width: 30px;
+}
+.rightarrow .arrowbtn img {
+  float: right;
+}
+@media only screen and (max-width: 540px) {
+  .leftarrow {
+    display: none;
+  }
+  .rightarrow {
+    display: none;
+  }
+}
+.maincontent {
+}
