Style and structure changed. Small improvement in js code

--- a/web/src/style/header.css
+++ b/web/src/style/header.css
@@ -1,5 +1,7 @@
 h1 {
-  background-color: rgb(197, 255, 191);
+  /* background-color: rgb(197, 255, 191); */
+  background-color: #212e5e;
+  color: white;
   /* border-bottom: 1px solid black; */
   box-shadow: 0 4px 2px -2px rgb(197, 197, 197);
   margin: 0;
