--- a/web/src/style/footer.css
+++ b/web/src/style/footer.css
@@ -1,7 +1,8 @@
 .selec-container {
   line-height: 45px;
   box-shadow: 0px -1px 0px 1px rgb(197, 197, 197);
-  background-color: rgb(197, 255, 191);
+  /* background-color: rgb(197, 255, 191); */
+  background-color: #212e5e;
   text-align: center;
   z-index: 5001250;
   width: 100%;
@@ -20,8 +21,9 @@
   -webkit-border-radius: 4;
   -moz-border-radius: 4;
   border-radius: 4px;
-  color: #ffffff;
-  background: #59ff93;
+  color: white;
+  /* background: #59ff93; */
+  background: #001669;
   padding: 0px 20px 0px 20px;
   border: solid #30ff78 1px;
   text-decoration: none;
@@ -36,14 +38,20 @@
     padding: 5% 0 5%;
   }
   .owl-carousel {
-    padding-right: 1px;
-    padding-left: 1px;
+    padding-right: 1%;
+    padding-left: 1%;
+  }
+}
+@media screen and (max-height: 540px), screen and (max-width: 300px) {
+  .selec-container {
+    position: relative;
   }
 }
 footer {
   line-height: 45px;
   box-shadow: 0px -1px 0px 1px rgb(197, 197, 197);
-  background-color: rgb(197, 255, 191);
+  background-color: #212e5e;
+  color: white;
   text-align: center;
   z-index: 5001250;
   width: 100%;
@@ -51,6 +59,20 @@ footer {
   margin-top: 0px;
   bottom: 0px;
   padding-bottom: 1%;
+}
+.answered {
+  -webkit-border-radius: 4;
+  -moz-border-radius: 4;
+  border-radius: 4px;
+  color: #ffffff;
+  background: #f9ae3b;
+  padding: 0px 20px 0px 20px;
+  border: solid #5fa879 1px;
+  text-decoration: none;
+  text-align: center;
+}
+.answered:hover {
+  background: #2ab159;
 }
 .selected {
   -webkit-border-radius: 4;
@@ -65,20 +87,6 @@ footer {
 }
 .selected:hover {
   background: #247741;
-}
-.answered {
-  -webkit-border-radius: 4;
-  -moz-border-radius: 4;
-  border-radius: 4px;
-  color: #ffffff;
-  background: #30c765;
-  padding: 0px 20px 0px 20px;
-  border: solid #5fa879 1px;
-  text-decoration: none;
-  text-align: center;
-}
-.answered:hover {
-  background: #2ab159;
 }
 .btn-selq:focus {
   outline: 0px;
